Overhauled UI and added Settings dialog - not finished